# Rlenv-fraudulent-transaction

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  agent.py  agent_weights.pth  baseline.py  client.py  demo_out.txt  demo_showcase.py  err.txt  inference.py  models.py  openenv.yaml  out.txt  pyproject.toml  requirements.txt  test_env.py  train_agent.py  train_out.txt
server/: __init__.py  app.py  episode_logger.py  fraud_environment.py  requirements.txt  reward_engine.py  transaction_generator.py
server/graders/: __init__.py
server/tasks/: __init__.py
tests/: test_fraud_env.py
